I've successfully implemented a complete Whisper AI speech-to-text functionality for your native Android app. Here's what I've added: Key Features Implemented: 1. Multiple Whisper Model Support 8 different models available: tiny, tiny.en, base, base.en, small, small.en, medium, medium.en Models range from 39MB (tiny) to 1.5GB (medium) with varying accuracy/speed trade-offs English-only models for better performance on English speech 2. In-App Model Downloads Models are downloaded directly from Hugging Face repository Real-time download progress tracking with progress bars Background downloads using OkHttp with resume capability Storage management to track used space 3. Native Whisper.cpp Integration JNI wrapper for native Whisper.cpp library CMake build configuration for cross-platform compilation Optimized for Android ARM architectures (arm64-v8a, armeabi-v7a, x86_64) 4. Enhanced UI Components Model Selection Dialog with download/delete options Current model display in the main header Settings button to access model management Progress indicators for downloads and transcription Error handling with user-friendly messages 5. Audio Processing Pipeline Audio format conversion to Whisper requirements (16kHz, mono, float32) Automatic audio file processing for transcription Real-time transcription with processing time tracking How It Works: First Launch: App initializes with the "base" model by default Model Selection: Users can tap the settings icon to see all available models Download Models: Choose which models to download based on your needs: Tiny: Fastest, lower accuracy (~39MB) Base: Good balance of speed/accuracy (~142MB) Small: Better accuracy, slower (~466MB) Medium: Highest accuracy, slowest (~1.5GB) Switch Models: Select any downloaded model to use for transcription Record & Transcribe: Record audio and get AI-powered transcription Technical Architecture: Native Layer: Whisper.cpp C++ library with JNI bindings Data Layer: Model download service, preferences man

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <!-- Internet permissions for downloading Whisper models -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <!-- Required for audio recording -->
     <uses-feature android:name="android.hardware.microphone" android:required="true" />
 
@@ -22,7 +26,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Medicaid"
-        android:requestLegacyExternalStorage="true">
+        android:requestLegacyExternalStorage="true"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
