Issues Fixed: C++ Header File Issues: Updated CMakeLists.txt to use the correct paths for whisper.cpp's restructured include and source directories Added missing include paths for both public headers and internal implementation files Missing Source Files: Added all required whisper.cpp source files including backend components and threading support Included proper version constant definitions CoreML Linking Errors: Created stub implementations for CoreML functions (whisper_coreml_init, whisper_coreml_free, whisper_coreml_encode) since CoreML is Apple-specific and not available on Android These stubs allow the code to compile while gracefully handling the absence of CoreML functionality Kotlin Compilation Errors: Fixed the incorrect MediaMetadataRetriever constant from METADATA_KEY_AUDIO_SAMPLE_RATE to METADATA_KEY_SAMPLERATE Fixed the return type mismatch in WhisperPreferencesManager by changing .collect { it } to .first() to properly return a String value

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -11,18 +11,24 @@ find_library(android-lib android)
 
 # Whisper.cpp source files
 file(GLOB_RECURSE WHISPER_SOURCES
-    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/whisper.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml-alloc.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml-backend.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml-quants.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/src/whisper.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml/src/ggml.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml/src/ggml-alloc.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml/src/ggml-backend.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml/src/ggml-backend-reg.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml/src/ggml-quants.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml/src/ggml-threading.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml/src/gguf.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/whisper-coreml-stubs.cpp"
 )
 
 # Create whisper static library
 add_library(whisper STATIC ${WHISPER_SOURCES})
 
 target_include_directories(whisper PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml/src
 )
 
 target_compile_definitions(whisper PRIVATE
@@ -32,6 +38,9 @@ target_compile_definitions(whisper PRIVATE
     GGML_USE_CLBLAST=0
     WHISPER_USE_COREML=0
     WHISPER_USE_METAL=0
+    GGML_VERSION="unknown"
+    GGML_COMMIT="unknown"
+    WHISPER_VERSION="unknown"
 )
 
 # JNI wrapper library
@@ -40,7 +49,9 @@ add_library(whisper-jni SHARED
 )
 
 target_include_directories(whisper-jni PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/whisper.cpp/ggml/src
 )
 
 target_link_libraries(whisper-jni
